--- a/Analsis_y_Visualizacion/Practico.ipynb
+++ b/Analsis_y_Visualizacion/Practico.ipynb
@@ -5013,7 +5013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DÍA MENSUAL"
+    "## Día Mensual"
    ]
   },
   {
@@ -5134,7 +5134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HORA\n",
+    "## Hora\n",
     "\n",
     "Los horarios más demandados para turnos son de 9 a 10 de la mañana y entre 15 y 17 horas. Esta situación se observa a lo largo de los cuatro centros de atención que posee la clínica. El horario más frecuente tomando a los cuatro centros de atención juntos es el que va entre las 10 y las 11 de la mañana, con 220.000 ocurrencias, aproximadamente. Lo siguen muy de cerca los turnos otorgados para los horarios de 9 a 10, 15 a 16, 16 a 17 y 17 a 18 horas."
    ]
@@ -5584,27 +5584,6 @@
    ],
    "source": [
     "chi_o1, chi_t1, pvalue1 = chicuadrado(Zipfs(len(vecesXpaciente_au)),vecesXpaciente_au.Cant_Paci_Normed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'chidd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-90-eefeea35555a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mchi_o1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchi_t1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpvalue1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchidd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mZipfs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvecesXpaciente_au\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvecesXpaciente_au\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCant_Paci_Normed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'chidd' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "chi_o1, chi_t1, pvalue1 = chidd(Zipfs(len(vecesXpaciente_au)),vecesXpaciente_au.Cant_Paci_Normed)"
    ]
   },
   {
