Changed saving .csv to .zip

--- a/Notebooks/Analisis_y_Curacion/Practico.ipynb
+++ b/Notebooks/Analisis_y_Curacion/Practico.ipynb
@@ -16075,7 +16075,9 @@
       },
       "source": [
         "if not in_colab:\n",
-        "  dfnn.to_csv(os.path.join(data_dir,'dataset_curado.csv'), index=False)"
+        "  name = 'dataset_curado.zip'\n",
+        "  dfnn.to_csv(os.path.join(data_dir, name), index=False, compression='zip')\n",
+        "  print('Dataset guardado en {}'.format(os.path.join(data_dir, name))"
       ],
       "execution_count": null,
       "outputs": []
