"Minor change in version cell"

--- a/Notebooks/Analisis_y_Visualizacion/Practico.ipynb
+++ b/Notebooks/Analisis_y_Visualizacion/Practico.ipynb
@@ -448,17 +448,8 @@
       "source": [
         "#Vemos versiones\n",
         "from platform import python_version\n",
-        "if in_colab:\n",
-        "  print('python                  ', python_version())\n",
-        "  !pip list | grep \"numpy \\|pandas \\|seaborn \\|sidetable \\|scipy \\|matplotlib \" | sed 7d\n",
-        "else:\n",
-        "  print('Python    :', python_version())\n",
-        "  print('Numpy     :', np.__version__)\n",
-        "  print('MatPlotLib:', matplotlib.__version__)\n",
-        "  print('Pandas    :', pd.__version__)\n",
-        "  print('Seaborn   :', sns.__version__)\n",
-        "  print('SciPy     :', sp.__version__) #Debería imprimir 1.5.1\n",
-        "  print('Sidetable :', sidetable.__version__) #Debería imprimir 0.6.0"
+        "print('python                       ', python_version())\n",
+        "!pip list | grep -E \"numpy |pandas |seaborn |psutil |xgboost |scikit-learn |sidetable |scipy |matplotlib \""
       ],
       "execution_count": null,
       "outputs": [
