Minor change in Version Cell

--- a/Notebooks/Analisis_y_Curacion/Practico.ipynb
+++ b/Notebooks/Analisis_y_Curacion/Practico.ipynb
@@ -254,7 +254,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 311
         },
-        "outputId": "ab5ac835-b940-41a7-c74b-94059cf4428c"
+        "outputId": "88c6411f-53c7-4d25-91ee-a4d64426d2f3"
       },
       "source": [
         "import os\n",
@@ -296,7 +296,7 @@
         "pd.options.display.max_columns = 30\n",
         "pd.options.display.max_rows    = 20"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,14 +313,14 @@
             "  Downloading https://files.pythonhosted.org/packages/a2/e7/7f1f22ad2d9a7b1003f04b68e7baa9c5646b1a918c359dc2a1f514d04fb4/sidetable-0.6.0-py3-none-any.whl\n",
             "Requirement already satisfied: pandas>=1.0 in /usr/local/lib/python3.6/dist-packages (from sidetable==0.6.0) (1.0.5)\n",
             "Requirement already satisfied: numpy>=1.13.3 in /usr/local/lib/python3.6/dist-packages (from pandas>=1.0->sidetable==0.6.0) (1.18.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=1.0->sidetable==0.6.0) (2.8.1)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=1.0->sidetable==0.6.0) (2018.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=1.0->sidetable==0.6.0) (2.8.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.6.1->pandas>=1.0->sidetable==0.6.0) (1.15.0)\n",
             "Installing collected packages: sidetable\n",
             "Successfully installed sidetable-0.6.0\n",
             "Collecting unidecode\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d0/42/d9edfed04228bacea2d824904cae367ee9efd05e6cce7ceaaedd0b0ad964/Unidecode-1.1.1-py2.py3-none-any.whl (238kB)\n",
-            "\u001b[K     |████████████████████████████████| 245kB 2.7MB/s \n",
+            "\u001b[K     |████████████████████████████████| 245kB 3.4MB/s \n",
             "\u001b[?25hInstalling collected packages: unidecode\n",
             "Successfully installed unidecode-1.1.1\n"
           ],
@@ -335,31 +335,32 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 201
+          "height": 219
         },
-        "outputId": "33e87738-04d6-49b7-e7f1-9078dcc5cc23"
+        "outputId": "402bade2-46d8-4e08-9303-53ed827ba4f8"
       },
       "source": [
         "#Vemos versiones\n",
         "from platform import python_version\n",
-        "print('python                  ', python_version())\n",
-        "!pip list | grep \"Unidecode \\|numpy \\|pandas \\|seaborn \\|sidetable \\|psutil \\|ipython \\|scipy \\|matplotlib \" | sed 9d"
+        "print('python                       ', python_version())\n",
+        "!pip list | grep  -E \"Unidecode |numpy |pandas |seaborn |sidetable |psutil |ipython |scipy |matplotlib \""
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "python                   3.6.9\n",
-            "ipython                  5.5.0          \n",
-            "matplotlib               3.2.2          \n",
-            "numpy                    1.18.5         \n",
-            "pandas                   1.0.5          \n",
-            "psutil                   5.4.8          \n",
-            "scipy                    1.4.1          \n",
-            "seaborn                  0.10.1         \n",
-            "sidetable                0.6.0          \n",
-            "Unidecode                1.1.1          \n"
+            "python                        3.6.9\n",
+            "ipython                       5.5.0          \n",
+            "matplotlib                    3.2.2          \n",
+            "numpy                         1.18.5         \n",
+            "pandas                        1.0.5          \n",
+            "psutil                        5.4.8          \n",
+            "scipy                         1.4.1          \n",
+            "seaborn                       0.10.1         \n",
+            "sidetable                     0.6.0          \n",
+            "sklearn-pandas                1.8.0          \n",
+            "Unidecode                     1.1.1          \n"
           ],
           "name": "stdout"
         }
