Minor change in Version Cell

--- a/Notebooks/Analisis_y_Visualizacion/Practico.ipynb
+++ b/Notebooks/Analisis_y_Visualizacion/Practico.ipynb
@@ -265,17 +265,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "c999ff4b-157c-452e-88f4-753f6eabc76e"
+        "outputId": "16839845-ff78-40bf-a192-6a084c64988e"
       },
       "source": [
         "!pip list | grep scipy"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "scipy                    1.4.1          \n"
+            "scipy                         1.4.1          \n"
           ],
           "name": "stdout"
         }
@@ -300,9 +300,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 72
+          "height": 103
         },
-        "outputId": "23c316c0-76af-4eb8-8efc-464e3a319657"
+        "outputId": "7a55bce2-9369-4c18-bfbd-726b7662adda"
       },
       "source": [
         "import scipy\n",
@@ -318,8 +318,8 @@
         {
           "output_type": "stream",
           "text": [
-            "\u001b[K     |████████████████████████████████| 25.9MB 163kB/s \n",
-            "\u001b[31mERROR: tensorflow 2.2.0 has requirement scipy==1.4.1; python_version >= \"3\", but you'll have scipy 1.5.1 which is incompatible.\u001b[0m\n",
+            "\u001b[K     |████████████████████████████████| 25.9MB 166kB/s \n",
+            "\u001b[31mERROR: tensorflow 2.3.0 has requirement scipy==1.4.1, but you'll have scipy 1.5.2 which is incompatible.\u001b[0m\n",
             "\u001b[31mERROR: albumentations 0.1.12 has requirement imgaug<0.2.7,>=0.2.5, but you'll have imgaug 0.2.9 which is incompatible.\u001b[0m\n",
             "\u001b[?25h"
           ],
@@ -359,7 +359,7 @@
         "import sys\n",
         "in_colab = 'google.colab' in sys.modules"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -371,7 +371,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 219
         },
-        "outputId": "1a795e62-aa68-45b0-da54-2cdfb22b3a82"
+        "outputId": "a10f7756-5c39-432e-b2f3-ed75b573fb10"
       },
       "source": [
         "import pandas as pd\n",
@@ -407,7 +407,7 @@
         "pd.options.display.max_columns = 30\n",
         "pd.options.display.max_rows = 15\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,28 +441,29 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 146
+          "height": 164
         },
-        "outputId": "5e969b37-6cce-40cc-8d5e-ab8e2447861c"
+        "outputId": "8b68e3cc-3246-493e-f834-04b31a49b10f"
       },
       "source": [
         "#Vemos versiones\n",
         "from platform import python_version\n",
         "print('python                       ', python_version())\n",
-        "!pip list | grep -E \"numpy |pandas |seaborn |psutil |xgboost |scikit-learn |sidetable |scipy |matplotlib \""
+        "!pip list | grep -E \"numpy |pandas |seaborn |sidetable |scipy |matplotlib \""
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "python                   3.6.9\n",
-            "matplotlib               3.2.2          \n",
-            "numpy                    1.18.5         \n",
-            "pandas                   1.0.5          \n",
-            "scipy                    1.5.1          \n",
-            "seaborn                  0.10.1         \n",
-            "sidetable                0.6.0          \n"
+            "python                        3.6.9\n",
+            "matplotlib                    3.2.2          \n",
+            "numpy                         1.18.5         \n",
+            "pandas                        1.0.5          \n",
+            "scipy                         1.5.2          \n",
+            "seaborn                       0.10.1         \n",
+            "sidetable                     0.6.0          \n",
+            "sklearn-pandas                1.8.0          \n"
           ],
           "name": "stdout"
         }
