Added a missing ")" in last cell

--- a/Notebooks/Analisis_y_Curacion/Practico.ipynb
+++ b/Notebooks/Analisis_y_Curacion/Practico.ipynb
@@ -296,7 +296,7 @@
         "pd.options.display.max_columns = 30\n",
         "pd.options.display.max_rows    = 20"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,7 @@
         "print('python                       ', python_version())\n",
         "!pip list | grep  -E \"Unidecode |numpy |pandas |seaborn |sidetable |psutil |ipython |scipy |matplotlib \""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -16078,7 +16078,7 @@
         "if not in_colab:\n",
         "  name = 'dataset_curado.zip'\n",
         "  dfnn.to_csv(os.path.join(data_dir, name), index=False, compression='zip')\n",
-        "  print('Dataset guardado en {}'.format(os.path.join(data_dir, name))"
+        "  print('Dataset guardado en {}'.format(os.path.join(data_dir, name)))"
       ],
       "execution_count": null,
       "outputs": []
